--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/router-cli": "^1.131.32",
     "@tanstack/router-devtools": "^1.131.32",
     "@types/bun": "latest",
+    "@types/colorthief": "2.6.0",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
@@ -31,6 +32,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
@@ -53,12 +55,14 @@
     "@tanstack/react-query-devtools": "^5.85.9",
     "@tanstack/react-router": "^1.131.32",
     "class-variance-authority": "^0.7.1",
+    "colorthief": "2.6.0",
     "lucide-react": "^0.542.0",
     "next-themes": "^0.4.6",
     "postcss": "8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "sonner": "2.0.7",
     "zod": "^4.1.5"
   },
   "lint-staged": {
