--- a/package.json
+++ b/package.json
@@ -54,13 +54,19 @@
     "@tanstack/react-query": "^5.85.9",
     "@tanstack/react-query-devtools": "^5.85.9",
     "@tanstack/react-router": "^1.131.32",
+    "@tsparticles/react": "3.0.0",
+    "@tsparticles/slim": "3.9.1",
     "class-variance-authority": "^0.7.1",
     "colorthief": "2.6.0",
     "lucide-react": "^0.542.0",
+    "motion": "12.23.12",
     "next-themes": "^0.4.6",
     "postcss": "8.5.6",
     "react": "^19.1.1",
+    "react-confetti": "6.4.0",
+    "react-countup": "6.5.3",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "1.6.5",
     "react-hook-form": "^7.62.0",
     "sonner": "2.0.7",
     "zod": "^4.1.5"
