--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "typecheck": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "contentful:build": "tsc -p tsconfig.contentful.json",
+    "contentful:migrate": "pnpm contentful:build && node ./contentful/run-migration.mjs",
+    "contentful:seed": "node ./contentful/seed-data.mjs"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
@@ -29,6 +32,7 @@
     "@vitejs/plugin-react-swc": "^4.0.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "contentful-migration": "4.31.5",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -59,6 +63,7 @@
     "@tsparticles/slim": "3.9.1",
     "class-variance-authority": "^0.7.1",
     "colorthief": "2.6.0",
+    "contentful-management": "11.63.1",
     "lucide-react": "^0.542.0",
     "motion": "12.23.12",
     "next-themes": "^0.4.6",
