feat: edits to make env secrets not public on deploy

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,14 +1,10 @@
-# Contentful CLI / Management tokens
-# These values are used by the migration command in package.json.
+# Contentful space configuration (used by CLI tools and server proxy)
 CONTENTFUL_SPACE_ID=your_space_id
-CONTENTFUL_ENVIRONMENT=master
+CONTENTFUL_ENVIRONMENT=your_environment_id
 CONTENTFUL_MANAGEMENT_TOKEN=your_content_management_token
+CONTENTFUL_DELIVERY_TOKEN=your_content_delivery_api_token
+CONTENTFUL_PREVIEW_TOKEN=your_preview_api_token
 
-# Contentful Delivery tokens (accessible to the browser)
-# Copy the same space/env values if you only use one environment.
-VITE_CONTENTFUL_SPACE_ID=your_space_id
-VITE_CONTENTFUL_ENVIRONMENT=master
-VITE_CONTENTFUL_DELIVERY_TOKEN=your_content_delivery_api_token
-
-# Optional: use the preview API token if you want to query draft content.
-VITE_CONTENTFUL_PREVIEW_TOKEN=your_preview_api_token
+# Client configuration
+# Leave as /api/contentful unless you deploy the proxy elsewhere.
+VITE_CONTENTFUL_API_BASE=/api/contentful
