feat: secrets secured, better code readability for dev

--- a/.env.local.example
+++ b/.env.local.example
@@ -5,6 +5,9 @@ CONTENTFUL_MANAGEMENT_TOKEN=your_content_management_token
 CONTENTFUL_DELIVERY_TOKEN=your_content_delivery_api_token
 CONTENTFUL_PREVIEW_TOKEN=your_preview_api_token
 
-# Client configuration
-# Leave as /api/contentful unless you deploy the proxy elsewhere.
-VITE_CONTENTFUL_API_BASE=/api/contentful
+# Client-side configuration (prefixed with VITE_)
+# These are exposed to the browser so only use Delivery/Preview tokens.
+VITE_CONTENTFUL_SPACE_ID=your_space_id
+VITE_CONTENTFUL_ENVIRONMENT=your_environment_id
+VITE_CONTENTFUL_DELIVERY_TOKEN=your_content_delivery_api_token
+VITE_CONTENTFUL_PREVIEW_TOKEN=your_preview_api_token
